# todo-app

./: .env.example  .gitignore  Cargo.toml  README.md
crates/todo-common/: Cargo.toml
crates/todo-common/src/: lib.rs
crates/todo-server/: Cargo.toml
crates/todo-server/migrations/: 20251205135521_create_todos_table.sql
crates/todo-server/src/: main.rs
crates/todo-tui/: Cargo.toml
crates/todo-tui/src/: main.rs
src/: main.rs  model.rs
