[package]
name = "todo-tui"
version = "0.1.0"
edition = "2024"

[dependencies]
color-eyre = "0.6.5"
crossterm = "0.29.0"
ratatui = "0.29.0"
reqwest = { version = "0.12.24", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
todo-common = { path = "../todo-common" }
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
cli-log = "2.1.0"
